style: Update font and background color in styles.css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rishabh Singh - Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#">Rishabh Singh</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,10 +29,11 @@
 
     <!-- Header -->
     <header class="bg-primary text-white text-center py-5">
-        <div class="container">
-            <h1 class="display-4">Rishabh Singh</h1>
-            <p class="lead">Aspiring Data Scientist | Machine Learning Enthusiast</p>
-            <a href="mailto:asusrishabh@outlook.com" class="btn btn-secondary">Contact Me</a>
+        <div class="container my-4">
+            <h1 class="display-4 animate__animated animate__fadeInDown">Rishabh Singh</h1>
+            <p class="lead animate__animated animate__fadeInUp">Aspiring Data Scientist | Machine Learning Enthusiast</p>
+            <a href="mailto:asusrishabh@outlook.com" class="btn btn-secondary animate__animated animate__zoomIn">Contact Me</a>
+            <a href="Rishabh7388587293.pdf" class="btn btn-secondary animate__animated animate__zoomIn ml-2">Download CV</a>
         </div>
     </header>
 
@@ -41,7 +43,7 @@
             <h2 class="text-center">Education</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <div class="card mb-3">
+                    <div class="card mb-3 animate__animated animate__fadeInLeft">
                         <div class="card-body">
                             <h5 class="card-title">Indian Institute of Technology Madras</h5>
                             <p class="card-text">Bachelor of Science in Data Science and Applications</p>
@@ -60,7 +62,7 @@
             <h2 class="text-center">Experience</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <div class="card mb-3">
+                    <div class="card mb-3 animate__animated animate__fadeInRight">
                         <div class="card-body">
                             <h5 class="card-title">Machine Learning Intern</h5>
                             <h6 class="card-subtitle mb-2 text-muted">iNeuron.ai | Mar 2024 – Apr 2024</h6>
@@ -81,7 +83,7 @@
             <div class="row">
                 <!-- Project 1 -->
                 <div class="col-lg-6 mb-4">
-                    <div class="card">
+                    <div class="card animate__animated animate__fadeInUp">
                         <div class="card-body">
                             <h5 class="card-title">Constituency Election Results Analysis</h5>
                             <p class="card-text">Conducted an unbiased analysis of the 2014 and 2019 elections in India using Python, Pandas, Matplotlib, and Seaborn.</p>
@@ -91,7 +93,7 @@
                 </div>
                 <!-- Project 2 -->
                 <div class="col-lg-6 mb-4">
-                    <div class="card">
+                    <div class="card animate__animated animate__fadeInUp">
                         <div class="card-body">
                             <h5 class="card-title">Sex and STD Case Study</h5>
                             <p class="card-text">In-depth case study on STDs in the United States using Tableau. Published on Tableau Public.</p>
@@ -101,7 +103,7 @@
                 </div>
                 <!-- Project 3 -->
                 <div class="col-lg-6 mb-4">
-                    <div class="card">
+                    <div class="card animate__animated animate__fadeInUp">
                         <div class="card-body">
                             <h5 class="card-title">Phishing Domain Detection</h5>
                             <p class="card-text">Developed a UI/API solution for detecting phishing threats using Python, Flask, Jinja2, Azure, Bootstrap, and scikit-learn.</p>
@@ -119,7 +121,7 @@
             <h2 class="text-center">Technical Skills</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <ul class="list-group">
+                    <ul class="list-group animate__animated animate__fadeInLeft">
                         <li class="list-group-item">Languages: Python, JavaScript</li>
                         <li class="list-group-item">Technologies: Pandas, scikit-learn, Tableau, Google Sheet, PostgreSQL, Git, PyTorch, Django, Flask, Bootstrap, RestAPI, Vue.js</li>
                         <li class="list-group-item">Concepts: Artificial Intelligence, Machine Learning, Neural Networks, API, DBMS, Linux, Cloud Computing</li>
@@ -135,7 +137,7 @@
             <h2 class="text-center">Contact</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-6">
-                    <ul class="list-group">
+                    <ul class="list-group animate__animated animate__fadeInRight">
                         <li class="list-group-item"><strong>Email:</strong> <a href="mailto:asusrishabh@outlook.com">asusrishabh@outlook.com</a></li>
                         <li class="list-group-item"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/rishabh11336/">rishabh11336</a></li>
                         <li class="list-group-item"><strong>GitHub:</strong> <a href="https://github.com/rishabh11336">rishabh11336</a></li>
