Update relevant coursework and technologies in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <h5 class="card-title">Indian Institute of Technology Madras</h5>
                             <p class="card-text">Bachelor of Science in Data Science and Applications</p>
                             <p class="card-text">Expected May 2025 | GPA: 7.83 / 10.0</p>
-                            <p class="card-text"><strong>Relevant Coursework:</strong> Data Structures and Algorithms (Python), Probability & Statistics, DBMS (PostgreSQL), Linear Algebra, Machine Learning Practice (Python), SE/ST, Linux</p>
+                            <p class="card-text"><strong>Relevant Coursework:</strong> Data Structures and Algorithms (Python), Probability & Statistics, DBMS (PostgreSQL), Linear Algebra, Machine Learning Practice (Python), SE/ST, SDLC, Linux</p>
                         </div>
                     </div>
                 </div>
@@ -123,8 +123,10 @@
                 <div class="col-lg-8">
                     <ul class="list-group animate__animated animate__fadeInLeft">
                         <li class="list-group-item">Languages: Python, JavaScript</li>
-                        <li class="list-group-item">Technologies: Pandas, scikit-learn, Tableau, Google Sheet, PostgreSQL, Git, PyTorch, Django, Flask, Bootstrap, RestAPI, Vue.js</li>
-                        <li class="list-group-item">Concepts: Artificial Intelligence, Machine Learning, Neural Networks, API, DBMS, Linux, Cloud Computing</li>
+                        <li class="list-group-item">Technologies: Pandas, scikit-learn, Tableau, Google Sheet, PostgreSQL, Git, PyTorch, TensorFlow, Django, Flask, Bootstrap,
+                            RestAPI, Vue.js, MongoDB, bash, jira</li>
+                        <li class="list-group-item">Concepts: Artificial Intelligence, Machine Learning, Neural Networks, Large Language Model, API, DBMS, Linux, Cloud
+                            Computing</li>
                     </ul>
                 </div>
             </div>
