style: Remove commented out code for half-circle image in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <div class="half-circle"></div>
+                            <!-- <div class="half-circle"></div> -->
                             <img src="images/me.png" alt="">
                         </div>
                     </div>
