style: Update timeline title in index.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                                     <h3 class="timeline-date">
                                                         <i class="fa fa-calendar"></i> Sep 2021- April 2025 (Expected)
                                                     </h3>
-                                                    <h4 class="timeline-title">B.S. in Data Science and Applications</h4>
+                                                    <h4 class="timeline-title">B.S. Data Science and Applications</h4>
                                                     <p class="timeline-text">Indian Institute of Technology, Madras (IITM)<br> CGPA: 7.83</b></p>
                                                 </div>
                                                 
