style: Update logo in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="aside">
             <div class="logo">
-                <a href="#"><img src="images/Home-Icon.svg" width="100"></a>
+                <a href="#"><img src="images/Logo.svg" width="300"></a>
             </div>
 
             <div class="nav-toggler">
