Changes made to experience

--- a/index.html
+++ b/index.html
@@ -168,13 +168,24 @@
                                                     <h4 class="timeline-title">B.S. Data Science and Applications</h4>
                                                     <p class="timeline-text">Indian Institute of Technology, Madras (IITM)<br> CGPA: 7.83</b></p>
                                                 </div>
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <!-- <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> Sep 2024- April 2025 (Expected)
+                                                    </h3> -->
+                                                    <h4 class="timeline-title">Minor in Economics & Finance</h4>
+                                                    <p class="timeline-text">Indian Institute of Technology, Madras (IITM)</p>
+                                                </div>
                                                 
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="experience padd-15">
                                     <h3 class="title">Experience</h3>
+                                    <!-- ML Intern @ iNeuron.ai -->
                                     <div class="row">
                                         <div class="timeline-box padd-15">
                                             <div class="timeline shadow-dark">
@@ -182,7 +193,7 @@
                                                     <div class="circle-dot"></div>
 
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> Jun 2023 - Nov 2023
+                                                        <i class="fa fa-calendar"></i> March 2024 - April 2024
                                                     </h3>
                                                     <h4 class="timeline-title">ML Intern @ iNeuron.ai | Cybersecurity, ML Model
                                                     </h4>
@@ -195,10 +206,38 @@
                                                         </ul>
                                                     </p>
                                                 </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <br>
+                                    <!-- Associate Analyst @ Chryselys | Data Science & ML -->
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> Oct 2024 - Present
+                                                    </h3>
+                                                    <h4 class="timeline-title">Associate Analyst @ Chryselys | Data Science & ML
+                                                    </h4>
+                                                    <p class="timeline-text">
+                                                        <ul class="timeline-text">
+                                                        <li>📌 Machine Learning and AWS</li>
+                                                        <li>📌 Insight-Driven Analysis</li>
+                                                        <li>📌 Strategic Impact</li>
+                                                        <li>📌 APLD Data Expertise</li>
+                                                        </ul>
+                                                    </p>
+                                                </div>
                             
                                             </div>
                                         </div>
                                     </div>
+
+
                                 </div>
                             </div>
                         </div>
