Changes made to previous

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                                         <li>📌scikit-learn, restAPI, Azure</li>
                                                         <li>📌Predicts whether domains are real or malicious</li>
                                                         <li>📌Enhancing cyber-security.</li>
-                                                        <li>📌ML model is Brain.</li>
+                                                        <li>📌Machine Learning.</li>
                                                         </ul>
                                                     </p>
                                                 </div>
