--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>I'm Rishabh Singh <span>Machine Learning Engineer</span></h3>
+                                    <h3>I'm Rishabh Singh <span>Data Scientist</span></h3>
                                     <p>As an student of IIT Madras with a Bachelor of Science in Data Science and Applications, my journey has been a blend of academic rigor and practical expertise. At iNeuron.ai, our team developed a machine learning model that predicts domain authenticity, bolstering cybersecurity defenses.
 
                                         My core competencies lie in Python, Git, and Machine Learning. Motivated by challenges and driven by data, I aim to contribute to innovative solutions in the field of data science.
