--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> Sep 2021- April 2025 (Expected)
+                                                        <i class="fa fa-calendar"></i> Sep 2021- April 2025
                                                     </h3>
                                                     <h4 class="timeline-title">B.S. Data Science and Applications</h4>
                                                     <p class="timeline-text">Indian Institute of Technology, Madras (IITM)<br> CGPA: 7.83</b></p>
