screen 720P size issue fixed

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                                     <h3 class="timeline-date">
                                                         <i class="fa fa-calendar"></i> Oct 2024 - Present
                                                     </h3>
-                                                    <h4 class="timeline-title">Data Scientist @ Chryselys
+                                                    <h4 class="timeline-title">Data Scientist @ Chryselys | Data Science & ML
                                                     </h4>
                                                     <p class="timeline-text">
                                                         <ul class="timeline-text">
