--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                                     <div class="circle-dot"></div>
 
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> Oct 2024 - Present
+                                                        <i class="fa fa-calendar"></i> Oct 2024 - Present (Almost 1 Year)
                                                     </h3>
                                                     <h4 class="timeline-title">Data Scientist @ Chryselys | Data Science & ML
                                                     </h4>
