--- a/index.html
+++ b/index.html
@@ -317,7 +317,77 @@
                     <div class="row">
                         <div class="portfolio-heading padd-15">
                             <h2>My Last Projects :</h2>
-                            <center><h2>Comming Soon! Contact me 👇</h2></center>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="portfolio-items padd-15">
+                            <!-- Project Card 1 -->
+                            <div class="portfolio-item">
+                                <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5QSaKrmae-MCimSBr67asYrZWzNvN4VFBJw&s" alt="ML Project">
+                                    </div>
+                                    <div class="portfolio-info">
+                                        <h4>Parking Management System</h4>
+                                        <div class="portfolio-tags">
+                                            <span class="tag">Python</span>
+                                            <span class="tag">Flask</span>
+                                            <span class="tag">VueJs</span>
+                                            <span class="tag">Azure</span>
+                                            <span class="tag">Redis</span>
+                                            <span class="tag">Celery</span>
+                                            <span class="tag">Webhook</span>
+                                        </div>
+                                        <p>Advanced parking management system modern Technology</p>
+                                        <div class="portfolio-links">
+                                            <a href="https://parking.rishabhsingh.me" target="_blank"><i class="fa fa-github"></i></a>
+                                            <a href="https://parking.rishabhsingh.me" class="live-demo"><i class="fa fa-link"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Project Card 2 -->
+                            <div class="portfolio-item">
+                                <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="https://img.freepik.com/free-vector/coming-soon-background-with-focus-light-effect-design_1017-27277.jpg?semt=ais_hybrid&w=740&q=80" alt="Deep Learning">
+                                    </div>
+                                    <div class="portfolio-info">
+                                        <h4>coming soom...</h4>
+                                        <div class="portfolio-tags">
+                                            <span class="tag">PyTorch</span>
+                                            <span class="tag">CNN</span>
+                                            <span class="tag">DL</span>
+                                        </div>
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad laborum est praesentium dignissimos consequuntur fuga alias impedit eligendi similique. Vel consectetur accusamus possimus molestiae sapiente dolores ullam, voluptatibus maiores modi.</p>
+                                        <div class="portfolio-links">
+                                            <a href="https://github.com/rishabh11336/image-classifier" target="_blank"><i class="fa fa-github"></i></a>
+                                            <a href="#" class="live-demo"><i class="fa fa-link"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Project Card 3 -->
+                            <div class="portfolio-item">
+                                <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="https://img.freepik.com/free-vector/coming-soon-background-with-focus-light-effect-design_1017-27277.jpg?semt=ais_hybrid&w=740&q=80" alt="Dashboard">
+                                    </div>
+                                    <div class="portfolio-info">
+                                        <h4>coming soon...</h4>
+                                        <div class="portfolio-tags">
+                                            <span class="tag">ML</span>
+                                            <span class="tag">SQL</span>
+                                            <span class="tag">DL</span>
+                                        </div>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laborum est praesentium dignissimos consequuntur fuga alias impedit eligendi similique. Vel consectetur accusamus possimus molestiae sapiente dolores ullam, voluptatibus maiores modi.</p>
+                                        <div class="portfolio-links">
+                                            <a href="https://github.com/rishabh11336/analytics-dashboard" target="_blank"><i class="fa fa-github"></i></a>
+                                            <a href="#" class="live-demo"><i class="fa fa-link"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
