--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                                         <img src="https://img.freepik.com/free-vector/coming-soon-background-with-focus-light-effect-design_1017-27277.jpg?semt=ais_hybrid&w=740&q=80" alt="Deep Learning">
                                     </div>
                                     <div class="portfolio-info">
-                                        <h4>coming soom...</h4>
+                                        <h4>coming soon...</h4>
                                         <div class="portfolio-tags">
                                             <span class="tag">PyTorch</span>
                                             <span class="tag">CNN</span>
