--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <link rel="stylesheet" href="css/style-switcher.css">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="images/Logo.svg">
+
 </head>
 
 <body class="dark">
