added card 2 with deployment link in subdomain

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                                         <p>Advanced parking management system modern Technology</p>
                                         <div class="portfolio-links">
                                             <a href="https://parking.rishabhsingh.me" target="_blank"><i class="fa fa-github"></i></a>
-                                            <a href="https://parking.rishabhsingh.me" class="live-demo"><i class="fa fa-link"></i></a>
+                                            <a href="https://parking.rishabhsingh.me" target="_blank" class="live-demo"><i class="fa fa-link"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -353,19 +353,21 @@
                             <div class="portfolio-item">
                                 <div class="portfolio-item-inner shadow-dark">
                                     <div class="portfolio-img">
-                                        <img src="https://img.freepik.com/free-vector/coming-soon-background-with-focus-light-effect-design_1017-27277.jpg?semt=ais_hybrid&w=740&q=80" alt="Deep Learning">
+                                        <img src="https://raw.githubusercontent.com/rishabh11336/Images-for-project/refs/heads/main/Screenshot%20Compass.png" alt="Compass">
                                     </div>
                                     <div class="portfolio-info">
-                                        <h4>coming soon...</h4>
+                                        <h4>Bloglite - Compass</h4>
                                         <div class="portfolio-tags">
-                                            <span class="tag">PyTorch</span>
-                                            <span class="tag">CNN</span>
-                                            <span class="tag">DL</span>
+                                            <span class="tag">Python</span>
+                                            <span class="tag">HTML</span>
+                                            <span class="tag">CSS</span>
+                                            <span class="tag">js</span>
+                                            <span class="tag">SQLite</span>
                                         </div>
-                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad laborum est praesentium dignissimos consequuntur fuga alias impedit eligendi similique. Vel consectetur accusamus possimus molestiae sapiente dolores ullam, voluptatibus maiores modi.</p>
+                                        <p>Compass is my first web development project — a simple blogging platform that lets users create and manage posts while helping me learn the basics of Flask, HTML, CSS, and JavaScript.</p>
                                         <div class="portfolio-links">
-                                            <a href="https://github.com/rishabh11336/image-classifier" target="_blank"><i class="fa fa-github"></i></a>
-                                            <a href="#" class="live-demo"><i class="fa fa-link"></i></a>
+                                            <a href="https://github.com/rishabh11336/Blogsite.git" target="_blank"><i class="fa fa-github"></i></a>
+                                            <a href="https://compass.rishabhsingh.me" class="live-demo" target="_blank"><i class="fa fa-link"></i></a>
                                         </div>
                                     </div>
                                 </div>
