--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
+    <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY&cl=ffffff&w=a"></script>
 </body>
 
 </html>
