add mapmyvisit script added 7

--- a/index.html
+++ b/index.html
@@ -460,7 +460,11 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
-    <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=800&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY'></script>
+
+    <!-- MapMyVisitors: wrapped in responsive container -->
+    <div class="mapmyvisitors-wrapper">
+        <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=800&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY'></script>
+    </div>
 </body>
 
 </html>
