add mapmyvisit script added 8

--- a/index.html
+++ b/index.html
@@ -461,9 +461,16 @@
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
 
-    <!-- MapMyVisitors: wrapped in responsive container -->
-    <div class="mapmyvisitors-wrapper">
-        <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=800&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY'></script>
+    <!-- Map card: rectangular container for MapMyVisitors -->
+    <div class="map-card container">
+        <div class="card-header">
+            <h3>Visitor Map</h3>
+        </div>
+        <div class="card-body">
+            <div class="mapmyvisitors-wrapper">
+                <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=800&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY'></script>
+            </div>
+        </div>
     </div>
 </body>
 
