add mapmyvisit script added 9

--- a/index.html
+++ b/index.html
@@ -436,6 +436,28 @@
                     <h4 class="contact-sub-title padd-15"> I'M VERY RESPONSIVE TO MESSAGES</h4>
                 </div>
             </section>
+            <!-- Visitors section: map card integrated into site layout -->
+            <section class="section" id="visitors">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Visitor Map</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="map-card padd-15">
+                            <div class="card-header">
+                                <h3>Live Visitors</h3>
+                            </div>
+                            <div class="card-body">
+                                <div class="mapmyvisitors-wrapper" aria-label="Visitor map" role="region">
+                                    <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=800&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY'></script>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 
@@ -461,17 +483,7 @@
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
 
-    <!-- Map card: rectangular container for MapMyVisitors -->
-    <div class="map-card container">
-        <div class="card-header">
-            <h3>Visitor Map</h3>
-        </div>
-        <div class="card-body">
-            <div class="mapmyvisitors-wrapper">
-                <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=800&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY'></script>
-            </div>
-        </div>
-    </div>
+    <!-- Map card removed (moved inside main-content section) -->
 </body>
 
 </html>
