add mapmyvisit script added 10

--- a/index.html
+++ b/index.html
@@ -447,11 +447,14 @@
                     <div class="row">
                         <div class="map-card padd-15">
                             <div class="card-header">
-                                <h3>Live Visitors</h3>
+                                <h2 class="section-title" style="margin:0; font-size:2rem; font-weight:700;">Live Visitors</h2>
+                                <div class="card-caption" style="font-size:0.95rem; color:var(--text-black-700); margin-top:2px;">Real-time map of site visitors</div>
                             </div>
                             <div class="card-body">
-                                <div class="mapmyvisitors-wrapper" aria-label="Visitor map" role="region">
-                                    <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=800&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY'></script>
+                                <div class="mapmyvisitors-area">
+                                    <div class="mapmyvisitors-wrapper" aria-label="Visitor map" role="region">
+                                        <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY'></script>
+                                    </div>
                                 </div>
                             </div>
                         </div>
