add mapmyvisit script added 11

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                             <div class="card-body">
                                 <div class="mapmyvisitors-area">
                                     <div class="mapmyvisitors-wrapper" aria-label="Visitor map" role="region">
-                                        <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY'></script>
+                                        <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=800&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY'></script>
                                     </div>
                                 </div>
                             </div>
