--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 <li><a href="#about" class="nav-item"><i class="fa fa-user"></i>About</a></li>
                 <li><a href="#services" class="nav-item"><i class="fa fa-list"></i>Services</a></li>
                 <li><a href="#portfolio" class="nav-item"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="#contact" class="nav-item""><i class="fa fa-comments"></i>Contact</a></li>
+                <li><a href="#contact" class="nav-item"><i class="fa fa-comments"></i>Contact</a></li>
+                <li><a href="#visitors" class="nav-item"><i class="fa fa-globe"></i>Visitors</a></li>
             </ul>
         </div>
 
@@ -436,25 +437,31 @@
                     <h4 class="contact-sub-title padd-15"> I'M VERY RESPONSIVE TO MESSAGES</h4>
                 </div>
             </section>
-            <!-- Visitors section: map card integrated into site layout -->
-            <section class="section" id="visitors">
+            <!-- Visitors Map Section -->
+            <section class="visitors-map section" id="visitors">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
-                            <h2>Visitor Map</h2>
+                            <h2>Global Reach</h2>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="map-card padd-15">
-                            <div class="card-header">
-                                <h2 class="section-title" style="margin:0; font-size:2rem; font-weight:700;">Live Visitors</h2>
-                                <div class="card-caption" style="font-size:0.95rem; color:var(--text-black-700); margin-top:2px;">Real-time map of site visitors</div>
-                            </div>
-                            <div class="card-body">
-                                <div class="mapmyvisitors-area">
-                                    <div class="mapmyvisitors-wrapper" aria-label="Visitor map" role="region">
-                                        <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=800&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY'></script>
+                        <div class="map-content padd-15">
+                            <div class="map-card">
+                                <div class="map-card-header">
+                                    <div class="map-header-content">
+                                        <i class="fas fa-globe"></i>
+                                        <h3>Visitors Around the World</h3>
                                     </div>
+                                    <p class="map-description">See where my portfolio visitors are connecting from across the globe</p>
+                                </div>
+                                <div class="map-tracker">
+                                    <a href="https://mapmyvisitors.com/web/1c0tu" title="Visit tracker" target="_blank" rel="noopener noreferrer" aria-label="Open visitors map in a new tab">
+                                        <img src="https://mapmyvisitors.com/map.png?cl=0e1633&w=900&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY&co=0b4975&ct=cdd4d9" alt="Visit tracker map showing global visitor locations" loading="lazy">
+                                    </a>
+                                </div>
+                                <div class="map-footer">
+                                    <p><i class="fas fa-info-circle"></i> Click the map to view detailed statistics</p>
                                 </div>
                             </div>
                         </div>
