fixed project info

--- a/index.html
+++ b/index.html
@@ -352,7 +352,6 @@
                                     <div class="portfolio-info">
                                         <h4>Parking Management System</h4>
                                         <div class="portfolio-tags">
-                                            <span class="tag">Python</span>
                                             <span class="tag">Flask</span>
                                             <span class="tag">VueJs</span>
                                             <span class="tag">Azure</span>
@@ -380,11 +379,12 @@
                                     <div class="portfolio-info">
                                         <h4>Bloglite - Compass</h4>
                                         <div class="portfolio-tags">
-                                            <span class="tag">Python</span>
+                                            <span class="tag">Flask</span>
                                             <span class="tag">HTML</span>
                                             <span class="tag">CSS</span>
                                             <span class="tag">js</span>
-                                            <span class="tag">SQLite</span>
+                                            <span class="tag">PostgreSQL</span>
+                                            <span class="tag">Supabase</span>
                                         </div>
                                         <p>Compass is my first web development project — a simple blogging platform that
                                             lets users create and manage posts while helping me learn the basics of
